css changes for icon alignment fix in quick settings

--- a/vtr-ui/src/app/components/widgets/widget-switch-icon/widget-switch-icon.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-switch-icon/widget-switch-icon.component.scss
@@ -105,9 +105,7 @@
 
 			.icomoon {
 				font-size: 3rem;
-				@media #{$mediaquery_XXL350X} {
-					line-height: 6rem;
-				}
+				line-height: 6rem;
 				@media #{$mediaquery_6} {
 					line-height: 5rem;
 				}
